fix: scale size on mobile

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -118,19 +118,19 @@ body::-webkit-scrollbar-thumb {
 
 @media (max-width: 840px) {
   html {
-    font-size: 15px;
+    font-size: 16px;
   }
 }
 
 @media (max-width: 540px) {
   html {
-    font-size: 13px;
+    font-size: 14px;
   }
 }
 
 @media (max-width: 480px) {
   html {
-    font-size: 11px;
+    font-size: 12px;
   }
 }
 
